added craft category products

--- a/art.html
+++ b/art.html
@@ -103,7 +103,7 @@
           <div class="container">
             <div class="row px-4 px-lg-5 py-lg-4 align-items-center">
               <div class="col-lg-6">
-                <h1 class="h2 text-uppercase mb-0">Shop > Toy & Games </h1>
+                <h1 class="h2 text-uppercase mb-0">Shop > Art Craft & Sewing </h1>
               </div>
               <div class="col-lg-6 text-lg-end">
                 <nav aria-label="breadcrumb">
@@ -167,14 +167,14 @@
                   <div class="col-lg-4 col-sm-6">
                     <div class="product text-center">
                       <div class="mb-3 position-relative">
-                        <div class="badge text-white bg-"></div><a class="d-block" href="products/toy1.html"><img class="img-fluid w-100" src="static/img/toy1.jpg" alt="..."></a>
+                        <div class="badge text-white bg-"></div><a class="d-block" href="#"><img class="img-fluid w-100" src="static/img/art1.jpg" alt="..."></a>
                         <div class="product-overlay">
                           <ul class="mb-0 list-inline">
                             <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="cart.html">Add to cart</a></li>
                           </ul>
                         </div>
                       </div>
-                      <h6> <a class="reset-anchor" href="products/toy1.html">KMassive Bubble Automatic Bubble Toys Bubble Machine</a></h6>
+                      <h6> <a class="reset-anchor" href="products/toy1.html">Anchor Embroidery Thread UMC STAG 50 Rainbow Colors 100%</a></h6>
                       <p class="small text-muted">$20</p>
                     </div>
                   </div>
@@ -182,14 +182,14 @@
                   <div class="col-lg-4 col-sm-6">
                     <div class="product text-center">
                       <div class="mb-3 position-relative">
-                        <div class="badge text-white bg-"></div><a class="d-block" href="products/toy2.html"><img class="img-fluid w-100" src="static/img/toy2.jpg" alt="..."></a>
+                        <div class="badge text-white bg-"></div><a class="d-block" href="#"><img class="img-fluid w-100" src="static/img/art2.jpg" alt="..."></a>
                         <div class="product-overlay">
                           <ul class="mb-0 list-inline">
                            <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="cart.html">Add to cart</a></li>
                         </ul>
                         </div>
                       </div>
-                      <h6> <a class="reset-anchor" href="products/toy2.html">Doctor Kit toy Kids Doctor Set e Doctor Nurses Blood Pressure ttoys</a></h6>
+                      <h6> <a class="reset-anchor" href="products/toy2.html">Sewing Tailor Chalk - 10 Pieces Box - Dressmakers Tailor's Chalk - Fabric</a></h6>
                       <p class="small text-muted">$21</p>
                     </div>
                   </div>
@@ -197,14 +197,14 @@
                   <div class="col-lg-4 col-sm-6">
                     <div class="product text-center">
                       <div class="mb-3 position-relative">
-                        <div class="badge text-white bg-danger">Sold</div><a class="d-block" href="products/toy3.html"><img class="img-fluid w-100" src="static/img/toy3.jpg" alt="..."></a>
+                        <div class="badge text-white bg-danger">Sold</div><a class="d-block" href="#"><img class="img-fluid w-100" src="static/img/art3.jpg" alt="..."></a>
                         <div class="product-overlay">
                           <ul class="mb-0 list-inline">
                             <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="cart.html">Add to cart</a></li>
                         </ul>
                         </div>
                       </div>
-                      <h6> <a class="reset-anchor" href="products/toy3.html">Tool Set Toy for Kids Plastic Multi color Construction Tools Toy Set</a></h6>
+                      <h6> <a class="reset-anchor" href="products/toy3.html">12 Pecs Multi color Woolen Embroidery Thread</a></h6>
                       <p class="small text-muted">$15</p>
                     </div>
                   </div>
@@ -212,14 +212,14 @@
                   <div class="col-lg-4 col-sm-6">
                     <div class="product text-center">
                       <div class="mb-3 position-relative">
-                        <div class="badge text-white bg-primary">New</div><a class="d-block" href="products/toy4.html"><img class="img-fluid w-100" src="static/img/toy4.jpg" alt="..."></a>
+                        <div class="badge text-white bg-primary">New</div><a class="d-block" href="#"><img class="img-fluid w-100" src="static/img/art4.jpg" alt="..."></a>
                         <div class="product-overlay">
                           <ul class="mb-0 list-inline">
                             <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="cart.html">Add to cart</a></li>
                         </ul>
                         </div>
                       </div>
-                      <h6> <a class="reset-anchor" href="products/toy4.html">Electric toy for children, mini electric iron toy, mini plastic furniture</a></h6>
+                      <h6> <a class="reset-anchor" href="products/toy4.html">HouseHold Reparing Needle Set - 27 Pcs - Threader Needle - Crewel</a></h6>
                       <p class="small text-muted">$351</p>
                     </div>
                   </div>
@@ -227,14 +227,14 @@
                   <div class="col-lg-4 col-sm-6">
                     <div class="product text-center">
                       <div class="mb-3 position-relative">
-                        <div class="badge text-white bg-"></div><a class="d-block" href="products/toy5.html"><img class="img-fluid w-100" src="static/img/toy5.jpg" alt="..."></a>
+                        <div class="badge text-white bg-"></div><a class="d-block" href="#"><img class="img-fluid w-100" src="static/img/art5.jpg" alt="..."></a>
                         <div class="product-overlay">
                           <ul class="mb-0 list-inline">
                             <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="cart.html">Add to cart</a></li>
                         </ul>
                         </div>
                       </div>
-                      <h6> <a class="reset-anchor" href="products/toy5.html">Doctor Set For Kids</a></h6>
+                      <h6> <a class="reset-anchor" href="products/toy5.html">2 union Skeins 8m Stranded Cotton Cross stitch skein embroidery thread</a></h6>
                       <p class="small text-muted">$31</p>
                     </div>
                   </div>
@@ -242,14 +242,14 @@
                   <div class="col-lg-4 col-sm-6">
                     <div class="product text-center">
                       <div class="mb-3 position-relative">
-                        <div class="badge text-white bg-"></div><a class="d-block" href="products/toy6.html"><img class="img-fluid w-100" src="static/img/toy6.jpg" alt="..."></a>
+                        <div class="badge text-white bg-"></div><a class="d-block" href="#"><img class="img-fluid w-100" src="static/img/art6.jpg" alt="..."></a>
                         <div class="product-overlay">
                           <ul class="mb-0 list-inline">
                             <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="cart.html">Add to cart</a></li>
                         </ul>
                         </div>
                       </div>
-                      <h6> <a class="reset-anchor" href="products/toy6.html">Mini Water Dispenser For Children Kids</a></h6>
+                      <h6> <a class="reset-anchor" href="products/toy6.html">Magnet Buttons For Hand Bags, Clutches and Wallets</a></h6>
                       <p class="small text-muted">$54</p>
                     </div>
                   </div>
