added some category items

--- a/pawn.html
+++ b/pawn.html
@@ -125,21 +125,26 @@
                   <div class="py-2 px-4 bg-dark text-white mb-3"><strong class="small text-uppercase fw-bold">Category</strong></div>
                 </a>       
                 <a href="toygames.html">         
-                  <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">Toy & Games</strong></div>
-                </a>
-                <a href="homekitchen.html">
-                  <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">Home & Kichen</strong></div>
-                </a>
-                <a href="pet.html">
-                  <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">Pet Supplies</strong></div>
-                </a>
-                <a href="beautycare.html">
-                  <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">Beauty & Care</strong></div>
-                </a>
+                    <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">Toy & Games</strong></div>
+                  </a>
+                  <a href="homekitchen.html">
+                    <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">Home & Kichen</strong></div>
+                  </a>
+                  <a href="pet.html">
+                    <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">Pet Supplies</strong></div>
+                  </a>
+                  <a href="beautycare.html">
+                    <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">Beauty & Care</strong></div>
+                  </a>
+                  <a href="art.html">
+                    <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">Art Craft & Sewing</strong></div>
+                  </a>
+                  <a href="pawn.html">
+                    <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">
+                      Patio lawn and garden
+                    </strong></div>
+                  </a>
                 <a href="art.html">
-                  <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">Art Craft & Sewing</strong></div>
-                </a>
-                <a href="pawn.html">
                   <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">
                     Patio lawn and garden
                   </strong></div>
@@ -172,14 +177,14 @@
                   <div class="col-lg-4 col-sm-6">
                     <div class="product text-center">
                       <div class="mb-3 position-relative">
-                        <div class="badge text-white bg-"></div><a class="d-block" href="products/toy1.html"><img class="img-fluid w-100" src="static/img/toy1.jpg" alt="..."></a>
+                        <div class="badge text-white bg-"></div><a class="d-block" href="#"><img class="img-fluid w-100" src="static/img/p1.jpg" alt="..."></a>
                         <div class="product-overlay">
                           <ul class="mb-0 list-inline">
                             <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="cart.html">Add to cart</a></li>
                           </ul>
                         </div>
                       </div>
-                      <h6> <a class="reset-anchor" href="products/toy1.html">KMassive Bubble Automatic Bubble Toys Bubble Machine</a></h6>
+                      <h6> <a class="reset-anchor" href="products/toy1.html">Manual Reel Lawn Mowers by Green City Grass Cutter Machine 16" inch</a></h6>
                       <p class="small text-muted">$20</p>
                     </div>
                   </div>
@@ -187,14 +192,14 @@
                   <div class="col-lg-4 col-sm-6">
                     <div class="product text-center">
                       <div class="mb-3 position-relative">
-                        <div class="badge text-white bg-"></div><a class="d-block" href="products/toy2.html"><img class="img-fluid w-100" src="static/img/toy2.jpg" alt="..."></a>
+                        <div class="badge text-white bg-"></div><a class="d-block" href="#"><img class="img-fluid w-100" src="static/img/p2.jpg" alt="..."></a>
                         <div class="product-overlay">
                           <ul class="mb-0 list-inline">
                            <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="cart.html">Add to cart</a></li>
                         </ul>
                         </div>
                       </div>
-                      <h6> <a class="reset-anchor" href="products/toy2.html">Doctor Kit toy Kids Doctor Set e Doctor Nurses Blood Pressure ttoys</a></h6>
+                      <h6> <a class="reset-anchor" href="products/toy2.html">COCO Peat -1kg Bag</a></h6>
                       <p class="small text-muted">$21</p>
                     </div>
                   </div>
@@ -202,14 +207,14 @@
                   <div class="col-lg-4 col-sm-6">
                     <div class="product text-center">
                       <div class="mb-3 position-relative">
-                        <div class="badge text-white bg-danger">Sold</div><a class="d-block" href="products/toy3.html"><img class="img-fluid w-100" src="static/img/toy3.jpg" alt="..."></a>
+                        <div class="badge text-white bg-danger">Sold</div><a class="d-block" href="#"><img class="img-fluid w-100" src="static/img/p3.jpg" alt="..."></a>
                         <div class="product-overlay">
                           <ul class="mb-0 list-inline">
                             <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="cart.html">Add to cart</a></li>
                         </ul>
                         </div>
                       </div>
-                      <h6> <a class="reset-anchor" href="products/toy3.html">Tool Set Toy for Kids Plastic Multi color Construction Tools Toy Set</a></h6>
+                      <h6> <a class="reset-anchor" href="products/toy3.html">Pack of 12 winter Vegetables seeds With Free Gift (Total 1000 Plus</a></h6>
                       <p class="small text-muted">$15</p>
                     </div>
                   </div>
@@ -217,14 +222,14 @@
                   <div class="col-lg-4 col-sm-6">
                     <div class="product text-center">
                       <div class="mb-3 position-relative">
-                        <div class="badge text-white bg-primary">New</div><a class="d-block" href="products/toy4.html"><img class="img-fluid w-100" src="static/img/toy4.jpg" alt="..."></a>
+                        <div class="badge text-white bg-primary">New</div><a class="d-block" href="#"><img class="img-fluid w-100" src="static/img/p4.jpg" alt="..."></a>
                         <div class="product-overlay">
                           <ul class="mb-0 list-inline">
                             <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="cart.html">Add to cart</a></li>
                         </ul>
                         </div>
                       </div>
-                      <h6> <a class="reset-anchor" href="products/toy4.html">Electric toy for children, mini electric iron toy, mini plastic furniture</a></h6>
+                      <h6> <a class="reset-anchor" href="products/toy4.html">Go-Organic 3Kg Organic Compost and Multipurpose Fertilizer for Plants</a></h6>
                       <p class="small text-muted">$351</p>
                     </div>
                   </div>
@@ -232,14 +237,14 @@
                   <div class="col-lg-4 col-sm-6">
                     <div class="product text-center">
                       <div class="mb-3 position-relative">
-                        <div class="badge text-white bg-"></div><a class="d-block" href="products/toy5.html"><img class="img-fluid w-100" src="static/img/toy5.jpg" alt="..."></a>
+                        <div class="badge text-white bg-"></div><a class="d-block" href="#"><img class="img-fluid w-100" src="static/img/p5.jpg" alt="..."></a>
                         <div class="product-overlay">
                           <ul class="mb-0 list-inline">
                             <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="cart.html">Add to cart</a></li>
                         </ul>
                         </div>
                       </div>
-                      <h6> <a class="reset-anchor" href="products/toy5.html">Doctor Set For Kids</a></h6>
+                      <h6> <a class="reset-anchor" href="products/toy5.html">Go-Organic 9Kg Organic Compost and Multipurpose Compost for</a></h6>
                       <p class="small text-muted">$31</p>
                     </div>
                   </div>
@@ -247,14 +252,14 @@
                   <div class="col-lg-4 col-sm-6">
                     <div class="product text-center">
                       <div class="mb-3 position-relative">
-                        <div class="badge text-white bg-"></div><a class="d-block" href="products/toy6.html"><img class="img-fluid w-100" src="static/img/toy6.jpg" alt="..."></a>
+                        <div class="badge text-white bg-"></div><a class="d-block" href="#"><img class="img-fluid w-100" src="static/img/p6.jpg" alt="..."></a>
                         <div class="product-overlay">
                           <ul class="mb-0 list-inline">
                             <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="cart.html">Add to cart</a></li>
                         </ul>
                         </div>
                       </div>
-                      <h6> <a class="reset-anchor" href="products/toy6.html">Mini Water Dispenser For Children Kids</a></h6>
+                      <h6> <a class="reset-anchor" href="products/toy6.html">Pack of 3 Gardening tool set Wooden Handle , Set of 3 Piece Garden Tool</a></h6>
                       <p class="small text-muted">$54</p>
                     </div>
                   </div>
