--- a/art.html
+++ b/art.html
@@ -139,6 +139,11 @@
                 <a href="art.html">
                   <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">Art Craft & Sewing</strong></div>
                 </a>
+                <a href="pawn.html">
+                  <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">
+                    Patio lawn and garden
+                  </strong></div>
+                </a>
               </div>
               <!-- SHOP LISTING-->
               <div class="col-lg-9 order-1 order-lg-2 mb-5 mb-lg-0">
