--- a/beautycare.html
+++ b/beautycare.html
@@ -121,10 +121,26 @@
               <!-- SHOP SIDEBAR-->
               <div class="col-lg-3 order-2 order-lg-1">
                 <div class="py-2 px-4 bg-dark text-white mb-3"><strong class="small text-uppercase fw-bold">Category</strong></div>                
-                <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">Toy & Games</strong></div>
-                <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">Home & Kichen</strong></div>
-                <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">Pet Supplies</strong></div>
-                <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">Beauty & Care</strong></div>
+                <a href="toygames.html">         
+                  <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">Toy & Games</strong></div>
+                </a>
+                <a href="homekitchen.html">
+                  <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">Home & Kichen</strong></div>
+                </a>
+                <a href="pet.html">
+                  <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">Pet Supplies</strong></div>
+                </a>
+                <a href="beautycare.html">
+                  <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">Beauty & Care</strong></div>
+                </a>
+                <a href="art.html">
+                  <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">Art Craft & Sewing</strong></div>
+                </a>
+                <a href="pawn.html">
+                  <div class="py-2 px-4 bg-light mb-3"><strong class="small text-uppercase fw-bold">
+                    Patio lawn and garden
+                  </strong></div>
+                </a>
               </div>
               <!-- SHOP LISTING-->
               <div class="col-lg-9 order-1 order-lg-2 mb-5 mb-lg-0">
